Handeled cases of different values of x and y

--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,21 +24,27 @@
     }
    ],
    "source": [
-    "# TASK: Create a bar plot with the following data: categories = ['A', 'B', 'C', 'D'] and values = [5, 7, 3, 9].\n",
-    "# Use different colors for each bar and add a title to the plot.\n",
     "import matplotlib.pyplot as plt\n",
-    "categories = ['A','B','C','D']\n",
-    "values = [5,7,3,9]\n",
-    "colors = ['red','blue','green','purple']\n",
     "\n",
-    "plt.bar(categories,values,color=colors)\n",
+    "# Function to create a bar plot\n",
+    "def create_bar_plot(categories, values):\n",
+    "    if len(categories) != len(values):\n",
+    "        raise ValueError(\"Categories and values must have the same length.\")\n",
+    "    \n",
+    "    colors = ['red', 'blue', 'green', 'purple'][:len(categories)]  # Limit colors to category count\n",
+    "    plt.bar(categories, values, color=colors)\n",
     "\n",
-    "plt.xlabel('Categories')\n",
-    "plt.ylabel('Values')\n",
-    "plt.title('Bar Plot Example')\n",
+    "    plt.xlabel('Categories')\n",
+    "    plt.ylabel('Values')\n",
+    "    plt.title('Bar Plot Example')\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example usage\n",
+    "categories = ['A', 'B', 'C', 'D']\n",
+    "values = [5, 7, 3, 9]\n",
+    "create_bar_plot(categories, values)\n"
    ]
   }
  ],
