--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,27 +24,31 @@
     }
    ],
    "source": [
-    "# TASK: Create a scatter plot with x = [1, 2, 3, 4, 5] and y = [2, 4, 6, 8, 10].\n",
-    "# Annotate each point with its (x, y) value, and set the title as 'Scatter Plot with Annotations'.\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Function to create a scatter plot\n",
+    "def create_scatter_plot(x, y):\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"x and y must have the same length.\")\n",
+    "    \n",
+    "    plt.scatter(x, y, color='blue')\n",
+    "\n",
+    "    # Annotate each point\n",
+    "    for i in range(len(x)):\n",
+    "        plt.annotate(f'({x[i]}, {y[i]})', (x[i], y[i]), textcoords=\"offset points\", xytext=(5, 5), ha='right')\n",
+    "\n",
+    "    # Labeling the axes and the plot\n",
+    "    plt.xlabel('x')\n",
+    "    plt.ylabel('y')\n",
+    "    plt.title('Scatter Plot with Annotations')\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example usage\n",
     "x = [1, 2, 3, 4, 5]\n",
     "y = [2, 4, 6, 8, 10]\n",
-    "\n",
-    "# Create a scatter plot\n",
-    "plt.scatter(x, y, color='blue')\n",
-    "\n",
-    "# Annotate each point\n",
-    "for i in range(len(x)):\n",
-    "    plt.annotate(f'({x[i]}, {y[i]})', (x[i], y[i]), textcoords=\"offset points\", xytext=(5,5), ha='right')\n",
-    "\n",
-    "# Labeling the axes and the plot\n",
-    "plt.xlabel('x')\n",
-    "plt.ylabel('y')\n",
-    "plt.title('Scatter Plot with Annotations')\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "create_scatter_plot(x, y)\n"
    ]
   }
  ],
