--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,23 +24,22 @@
     }
    ],
    "source": [
-    "# TASK: Create a pie chart with the following data: labels = ['Python', 'Java', 'C++', 'JavaScript'] and sizes = [40, 25, 20, 15].\n",
-    "# Display the percentages on the chart using autopct.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Data\n",
+    "# Function to create a pie chart\n",
+    "def create_pie_chart(labels, sizes):\n",
+    "    if len(labels) != len(sizes):\n",
+    "        raise ValueError(\"Labels and sizes must have the same length.\")\n",
+    "    \n",
+    "    plt.figure(figsize=(7, 7))\n",
+    "    plt.pie(sizes, labels=labels, autopct='%1.1f%%', colors=['blue', 'red', 'green', 'orange'][:len(labels)], startangle=140)\n",
+    "    plt.title('Programming Language Popularity')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example usage\n",
     "labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
     "sizes = [40, 25, 20, 15]\n",
-    "\n",
-    "# Create a pie chart\n",
-    "plt.figure(figsize=(7, 7))\n",
-    "plt.pie(sizes, labels=labels, autopct='%1.1f%%', colors=['blue', 'red', 'green', 'orange'], startangle=140)\n",
-    "\n",
-    "# Add a title\n",
-    "plt.title('Programming Language Popularity')\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "create_pie_chart(labels, sizes)\n"
    ]
   }
  ],
