--- a/src/6-histogram.ipynb
+++ b/src/6-histogram.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,23 +24,26 @@
     }
    ],
    "source": [
-    "# TASK: Create a histogram for the following data: data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5].\n",
-    "# Customize the histogram with a title, labels for the x-axis, and a specific color for the bars.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Data\n",
+    "# Function to create a histogram\n",
+    "def create_histogram(data, bins=5):\n",
+    "    if not data:\n",
+    "        raise ValueError(\"Data cannot be empty.\")\n",
+    "    \n",
+    "    plt.hist(data, bins=bins, color='skyblue', edgecolor='black')\n",
+    "\n",
+    "    # Labeling the axes and the plot\n",
+    "    plt.xlabel('Value')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.title('Histogram Example')\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example usage\n",
     "data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5]\n",
-    "\n",
-    "# Create a histogram\n",
-    "plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
-    "\n",
-    "# Labeling the axes and the plot\n",
-    "plt.xlabel('Value')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Histogram Example')\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()\n"
+    "create_histogram(data, bins=5)\n"
    ]
   }
  ],
