--- a/src/5-subplot.ipynb
+++ b/src/5-subplot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,53 +25,68 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Function to create subplots with validation\n",
     "def create_subplots(x, y, categories, values, labels, sizes):\n",
-    "    # Validate inputs to prevent mismatches\n",
-    "    if len(x) != len(y):\n",
-    "        raise ValueError(\"Length of x and y must be equal for line and scatter plots.\")\n",
+    "    try:\n",
+    "        # Ensure inputs are valid lists\n",
+    "        if not all(isinstance(lst, list) for lst in [x, y, categories, values, labels, sizes]):\n",
+    "            raise TypeError(\"All inputs must be lists.\")\n",
     "\n",
-    "    if len(categories) != len(values):\n",
-    "        raise ValueError(\"Categories and values must have the same length for bar plot.\")\n",
+    "        # Check for empty lists\n",
+    "        if not x or not y:\n",
+    "            print(\"Warning: Empty data for line/scatter plot. Skipping these plots.\")\n",
+    "        if not categories or not values:\n",
+    "            print(\"Warning: Empty data for bar plot. Skipping this plot.\")\n",
+    "        if not labels or not sizes:\n",
+    "            print(\"Warning: Empty data for pie chart. Skipping this plot.\")\n",
     "\n",
-    "    if len(labels) != len(sizes):\n",
-    "        raise ValueError(\"Labels and sizes must have the same length for pie chart.\")\n",
+    "        # Ensure equal lengths for necessary lists\n",
+    "        if len(x) != len(y):\n",
+    "            raise ValueError(\"x and y must be of equal length.\")\n",
+    "        if len(categories) != len(values):\n",
+    "            raise ValueError(\"Categories and values must be of equal length.\")\n",
+    "        if len(labels) != len(sizes):\n",
+    "            raise ValueError(\"Labels and sizes must be of equal length.\")\n",
     "\n",
-    "    fig, axs = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "        # Ensure non-negative pie chart sizes\n",
+    "        if any(size < 0 for size in sizes):\n",
+    "            raise ValueError(\"Pie chart sizes must be non-negative.\")\n",
     "\n",
-    "    # First subplot: Line plot (Only if data is provided)\n",
-    "    if x and y:\n",
-    "        axs[0, 0].plot(x, y, marker='o')\n",
-    "        axs[0, 0].set_title('Line Plot')\n",
+    "        # Create subplots\n",
+    "        fig, axs = plt.subplots(2, 2, figsize=(10, 10))\n",
     "\n",
-    "    # Second subplot: Bar plot (Only if data is provided)\n",
-    "    if categories and values:\n",
-    "        axs[0, 1].bar(categories, values)\n",
-    "        axs[0, 1].set_title('Bar Plot')\n",
+    "        # First subplot: Line plot\n",
+    "        if x and y:\n",
+    "            axs[0, 0].plot(x, y, marker='o')\n",
+    "            axs[0, 0].set_title('Line Plot')\n",
     "\n",
-    "    # Third subplot: Scatter plot (Only if data is provided)\n",
-    "    if x and y:\n",
-    "        axs[1, 0].scatter(x, y)\n",
-    "        axs[1, 0].set_title('Scatter Plot')\n",
+    "        # Second subplot: Bar plot\n",
+    "        if categories and values:\n",
+    "            axs[0, 1].bar(categories, values)\n",
+    "            axs[0, 1].set_title('Bar Plot')\n",
     "\n",
-    "    # Fourth subplot: Pie chart (Only if data is provided)\n",
-    "    if labels and sizes:\n",
-    "        axs[1, 1].pie(sizes, labels=labels, autopct='%1.1f%%')\n",
-    "        axs[1, 1].set_title('Pie Chart')\n",
+    "        # Third subplot: Scatter plot\n",
+    "        if x and y:\n",
+    "            axs[1, 0].scatter(x, y)\n",
+    "            axs[1, 0].set_title('Scatter Plot')\n",
     "\n",
-    "    plt.show()\n",
+    "        # Fourth subplot: Pie chart\n",
+    "        if labels and sizes:\n",
+    "            axs[1, 1].pie(sizes, labels=labels, autopct='%1.1f%%')\n",
+    "            axs[1, 1].set_title('Pie Chart')\n",
+    "\n",
+    "        # Show plots\n",
+    "        plt.show()\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
     "\n",
     "# Example usage\n",
-    "x = [0, 1, 2, 3, 4]  # Dynamic x values\n",
-    "y = [0, 1, 4, 9, 16]  # Dynamic y values\n",
-    "\n",
+    "x = [0, 1, 2, 3, 4]\n",
+    "y = [0, 1, 4, 9, 16]\n",
     "categories = ['A', 'B', 'C', 'D']\n",
     "values = [5, 3, 9, 6]\n",
-    "\n",
     "labels = ['Apple', 'Banana', 'Cherry', 'Date']\n",
     "sizes = [10, 15, 7, 5]\n",
-    "\n",
     "create_subplots(x, y, categories, values, labels, sizes)\n"
    ]
   }
